--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "cra-template": "1.2.0",
     "dom": "^0.0.3",
     "font-awesome-icons": "^1.6.0",
-    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -23,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +44,9 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://prasanthvpk.github.io/your-repo",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   }
 }
