--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://prasanthvpk.github.io/your-repo",
+"homepage": "https://your-username.github.io/your-repo",
   "devDependencies": {
     "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
