--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,9 +42,7 @@
       "last 1 safari version"
     ]
   },
-"homepage": "https://your-username.github.io/your-repo",
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   }
 }
