--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-dom": "^19.0.0",
     "react-router": "^6.30.0",
     "react-router-dom": "^6.30.0",
-    "react-scripts": "5.0.1",
-    "router": "^1.3.8"
+    "react-scripts": "^3.0.1",
+    "router": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
