--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-command = "npm run build"
-publish = "build"
+  command = "npm run build"
+  publish = "build"
 
-[build.environment]
-NODE_VERSION = "18.17.0"
+[context.production.environment]
+  NODE_VERSION = "20"
 
 [[redirects]]
 from = "/*"
