--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cra-template": "1.2.0",
     "dom": "^0.0.3",
     "font-awesome-icons": "^1.6.0",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
